--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
 		<link href="assets/css/bootstrap.css" rel="stylesheet" />
 		<link href="assets/css/style.css" rel="stylesheet" />
 	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <a class="navbar-brand" href="#">Bhaskar Singh</a>
+	<body background="assets/img/wallpapers.jpg">
+		<div >
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<a class="navbar-brand" href="index.html">Bhaskar Singh</a>
 
-		  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-			  <li class="nav-item active">
-				<a class="nav-link" href="#">Resume <span class="sr-only">(current)</span></a>
-			  </li>
-			  <li class="nav-item active">
-				<a class="nav-link" href="#">Skills</a>
-			  </li>
-			  <li class="nav-item active">
-				<a class="nav-link" href="#">Projects</a>
-			  </li>
-			</ul>
-		  </div>
-		</nav>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Resume <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Skills</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Projects</a>
+				</li>
+				</ul>
+			</div>
+			</nav>
+		</div>
 	</body>
 </html>
