Added linkedin url and target property for opening url on new tab

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<h3>Social Connect</h3>
 						<div class="socialContact">
 							<div class="icon">
-								<a href="https://twitter.com/bhaskarsinghOO7">
+								<a href="https://twitter.com/bhaskarsinghOO7" target="_blank">
 									<i class="fa fa-twitter fa-3x socialLogo"></i>
 								</a>
 							</div>
@@ -173,7 +173,7 @@
 								</a>
 							</div> -->
 							<div class="icon">
-								<a href="">
+								<a href="https://www.linkedin.com/in/bhaskar-singh-583062104/" target="_blank">
 									<i class="fa fa-linkedin-square fa-3x socialLogo"></i>
 								</a>
 							</div>
