Added image, changed copyright year

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<h2>I am FullStack Developer</h2>
 				<a href="#about" class="gotoMyInfo">About Me</a>
 			</div>
+			<div>
+				<img src="assets/img/IMG_20190101_180123.jpg" alt="" class="displayPic">
+			</div>
 		</section>
 
 		<section class="about" id="about">
@@ -193,7 +196,7 @@
 		</section>
 		<!-- Creating Footer Layout in HTML -->
 		<footer class="copyright">
-			<p>&copy; 2020, https://neardybhaskar.github.io, Allrights reserved</p>
+			<p>&copy; 2021, https://neardybhaskar.github.io, Allrights reserved</p>
 		</footer>
 
 		<script>
