added new resume

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<h2>I'm <b>Bhaskar Singh</b>, a Java and Angular Developer</h2>
 					<p>All you contents</p>
 					<div class="heading bottom">
-						<a href="assets/others/BhaskarCV.pdf" target="_blank" class="gotoMyInfo resumeButton">Download CV</a>
+						<a href="assets/others/BhaskarSingh.pdf" target="_blank" class="gotoMyInfo resumeButton">Download CV</a>
 						<div class="aboutMe">
 							<b>Name:</b> Bhaskar Singh<br>
 							<b>Age:</b> 26
