--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
         <div class="servicesBx">
             <i class="fa fa-whatsapp fa-4x"></i>
-            <h3>Oracle DB</h3>
+            <h3>Spring Boot</h3>
             <p></p>
         </div>
     </div>
