Changes images and added some css changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio</title>
+    <title>Bhaskar's Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css"/>
     <link href="assets/css/bootstrap.css" rel="stylesheet"/>
     <script
@@ -12,6 +12,7 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -21,13 +22,10 @@
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand logo" href="index.html">Bhaskar Singh</a>
+            <a class="navbar-brand logo" href="index.html">Home</a>
 
             <div class="collapse navbar-collapse headerContent" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link headerText" href="#home">Home</a>
-                    </li>
                     <li class="nav-item active">
                         <a class="nav-link headerText" href="#about">About</a>
                     </li>
@@ -55,7 +53,7 @@
         <a href="#about" class="gotoMyInfo">About Me</a>
     </div>
     <div>
-        <img src="assets/img/IMG_20190101_180123.jpg" alt="" class="displayPic">
+        <img src="assets/img/Myself.jpg" alt="" class="displayPic">
     </div>
 </section>
 
@@ -66,7 +64,7 @@
     </div>
     <div class="content">
         <div class="insideContainer w50">
-            <img src="assets/img/905909.jfif" alt="" class="contentPic">
+            <img src="assets/img/about-me.png" alt="" class="contentPic">
         </div>
         <div class="contentDetails w50">
             <h3>Who am I?</h3>
@@ -108,7 +106,7 @@
             <p></p>
         </div>
         <div class="servicesBx">
-            <i class="fa fa-twitter-square fa-4x"></i>
+            <i class="fab fa-java"></i>
             <h3>Java</h3>
             <p></p>
         </div>
