Changed logo and added some css changes

--- a/index.html
+++ b/index.html
@@ -91,30 +91,23 @@
     </div>
     <div class="content">
         <div class="servicesBx">
-            <i class="fa fa-css3 fa-4x"></i>
-            <h3>CSS</h3>
-            <p></p>
+            <img src="assets/img/html5-logo.png" alt="" class="html-pic">
         </div>
         <div class="servicesBx">
-            <i class="fa fa-html5 fa-4x"></i>
-            <h3>HTML</h3>
-            <p></p>
+            <img src="assets/img/java-logo.png" alt="" class="java-pic">
         </div>
         <div class="servicesBx">
-            <i class="fab fa-java"></i>
-            <h3>Java</h3>
-            <p></p>
+            <img src="assets/img/ui-logo.png" alt="" class="ui-stack-pic">
         </div>
         <div class="servicesBx">
-            <i class="fa fa-linkedin-square fa-4x"></i>
-            <h3>Angular</h3>
-            <p></p>
+            <img src="assets/img/spring-logo.svg" alt="" class="spring-pic">
         </div>
         <div class="servicesBx">
-            <i class="fa fa-whatsapp fa-4x"></i>
-            <h3>Spring Boot</h3>
-            <p></p>
+            <img src="assets/img/spring-boot-logo.svg" alt="" class="spring-boot-pic">
         </div>
+    </div>
+    <div class="content">
+        
     </div>
 </section>
 
